--- a/swingexplorer-core/pom.xml
+++ b/swingexplorer-core/pom.xml
@@ -13,6 +13,14 @@
     <packaging>jar</packaging>
     <name>swingexplorer-core</name>
     <description>Core code of Swing Explorer, a tool for inspecting Swing GUI structure</description>
+    
+    <repositories>
+        <repository>
+            <id>webswing-3rd-parties</id>
+            <url>https://dev.webswing.org/public/nexus/repository/webswing-3rd-parties/</url>
+        </repository>
+    </repositories>
+
 
     <dependencies>
         <dependency>
@@ -30,6 +38,11 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.15.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.formdev</groupId>
+            <artifactId>flatlaf-demo</artifactId>
+            <version>3.1.1</version>
         </dependency>
     </dependencies>
 
